syntax = "proto3"; // proto 버전

option java_multiple_files = true; // 여러 파일을 만들지 여부
option java_package = "jth.grpctest.bookinfo"; // 패키지 이름
option java_outer_classname = "BookInfoProto"; // 클래스 이름

package BookInfo;

service BookInfoService {
  rpc getBookInfo(BookInfoRequest) returns (stream BookInfoResponse) {}
}

message BookInfoRequest {
  bytes file = 1;
}

message BookInfoResponse {
  string msg = 1;
}


